@@ -1,4 +1,5 @@
 * Release 7.0.0
+	* Fixed Bug #136: On non BeOS systems, calling sysinfo may open GUI program
 	* Fixed Bug #138: Invalid escape sequences warn when building in Python 3.8
 	* Fixed Bug #147: Remove extended_model and extended_family fields
 	* Fixed Bug #146: CPUID family and model is wrong
